Sema: Only warn about @inlinable implying @usableFromInline in -swift-version 4.2

Another SwiftNIO request.

Fixes <https://bugs.swift.org/browse/SR-7578>.